src/themes/default/dropdown/index.css
.dropdown-content, .dropdown-subcontent {
  animation-duration: 400ms;
  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
  background-color: #fff;
  border-radius: var(--border-radius);
  box-shadow:
    0 0 0 1px rgba(0, 0, 0, 0.12),
    0 2px 12px -2px rgba(0, 0, 0, 0.12),
    0 8px 24px -4px rgba(0, 0, 0, 0.08);
  line-height: 160%;
  min-width: 160px;
  padding: 5px 0;
}

.dropdown-content[data-side='top'], .dropdown-subcontent[data-side='top'] {
  animation-name: slideDownAndFade;
}
.dropdown-content[data-side='right'], .dropdown-subcontent[data-side='right'] {
  animation-name: slideLeftAndFade;
}
.dropdown-content[data-side='bottom'], .dropdown-subcontent[data-side='bottom'] {
  animation-name: slideUpAndFade;
}
.dropdown-content[data-side='left'], .dropdown-subcontent[data-side='left'] {
  animation-name: slideRightAndFade;
}

.dropdown-item {
  align-items: center;
  border-radius: calc(var(--border-radius) - 1px);
  color: var(--font-dark);
  cursor: pointer;
  display: flex;
  font-size: var(--font-tiny);
  font-weight: 400;
  padding: 2px 10px;
  outline: none;
  user-select: none;
}

.dropdown-item a[href] {
  color: var(--font-dark);
}

.dropdown-item a[href]:hover {
  text-decoration: none;
}

.dropdown-item p {
  color: var(--font-light);
  line-height: 150%;
  margin: 0;
  max-width: 300px;
  padding: 5px 5px 5px 0;
}

.dropdown-item svg {
  color: var(--font-light);
  padding-right: 7px;
  position: relative;
  top: -1px;
}

.dropdown-item[data-highlighted],
.dropdown-checkbox-item[data-highlighted],
.dropdown-radio-item[data-highlighted],
.dropdown-sub-trigger[data-highlighted] {
  background-color: rgba(0, 0, 0, 0.08);  
}

.dropdown-item[data-disabled],
.dropdown-checkbox-item[data-disabled],
.dropdown-radio-item[data-disabled],
.dropdown-sub-trigger[data-disabled] {
  pointer-events: none;
}

.dropdown-indicator {
  left: 9px;
  top: 5px;
  position: absolute;
}

@keyframes slideUpAndFade {
  from {
    opacity: 0;
    transform: translateY(2px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideRightAndFade {
  from {
    opacity: 0;
    transform: translateX(-2px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@keyframes slideDownAndFade {
  from {
    opacity: 0;
    transform: translateY(-2px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes slideLeftAndFade {
  from {
    opacity: 0;
    transform: translateX(2px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

